# laser-rust

./: .gitignore  Cargo.toml  README.md  available_times.csv  data.json
src/: main.rs  timeslot.rs
