[package]
name = "laser-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0"
serde_json = "1.0"
chrono = "0.4"
reqwest = { version = "0.11", features = ["blocking"] }

[profile.release]
strip = true
opt-level = "z"
lto = true
debug = false
panic = "abort"
codegen-units = 1
